fix side-nav on mobile

--- a/src/app/procedures/procedures.component.scss
+++ b/src/app/procedures/procedures.component.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 
 .content-container {
   padding: 20px;
@@ -11,7 +13,7 @@
 }
 
 .sidenav-toggle-btn {
-  position: absolute;
+  position: fixed;
   top: 50%;
   z-index: 1;
   height: 80px;
@@ -19,5 +21,10 @@
 
   &:hover {
     cursor: pointer;
+  }
+}
+@media screen and (max-width: $break-small) {
+  .procedures-sidenav {
+    width: 100%;
   }
 }
